[package]
name = "librna"
authors = ["Vincent Messow"]
repository = "https://github.com/fncnt/librna-rs"
homepage = "https://github.com/fncnt/librna-rs"
documentation = "https://docs.rs/crate/librna"
readme = "README.md"
license = "MIT"
description = "API bindings for the ViennaRNA library."
keywords = ["viennarna", "rna", "bioinformatics"]
categories = ["api-bindings", "science"]
version = "0.1.0"
edition = "2018"

[workspace]
members = ["librna-sys"]

[lib]
doctest = false
crate-type = ["lib"]

[build-dependencies]

[dependencies]
#libc = "~0.2"
librna-sys = { path = "librna-sys", version = "0.1.4", features = [] }

[dev-dependencies]

[features]
default = []
auto = ["librna-sys/auto"]
